[package]
name = "aimer_native"
version = "0.1.0"
edition = "2024"

[dependencies]


[target.'cfg(not(target_os = "ios"))'.dependencies]

[target.'cfg(not(target_os = "android"))'.dependencies]

[target.'cfg(not(target_os = "window"))'.dependencies]


[target.'cfg(any(target_os = "macos"))'.dependencies]
objc2 = "0.5"
objc2-foundation = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
