[package]
name = "aimer_router"
version = "0.1.0"
edition = "2024"

[dependencies]
aimer_utils.workspace = true
aimer_widget.workspace = true
aimer_attribute.workspace =  true
aimer_color.workspace = true
aimer_events.workspace = true

url.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "History", "Location", "EventTarget", "PopStateEvent"] }

[dev-dependencies]
aimer_canvas.workspace = true
tokio.workspace = true