[package]
name = "aimer_svg"
version = "0.1.0"
edition = "2024"
description = "Retained SVG parsing and widgets for Aimer"

[dependencies]
aimer_cupid.workspace = true
aimer_attribute.workspace = true
aimer_events.workspace = true
aimer_utils.workspace = true
aimer_widget.workspace = true
thiserror.workspace = true
usvg.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt"] }
reqwest.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = ["Response", "Window"] }

[dev-dependencies]
tempfile.workspace = true