[package]
name = "aimer_text"
version = "0.1.0"
edition = "2024"

[dependencies]
aimer_macro.workspace = true
aimer_attribute.workspace = true
aimer_color.workspace = true
aimer_widget.workspace = true
aimer_style.workspace = true
aimer_events.workspace = true
aimer_utils.workspace = true
unicode-linebreak.workspace = true
unicode-segmentation.workspace = true

[dev-dependencies]
aimer_canvas.workspace = true
aimer_cupid.workspace = true
winit.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true