[package]
name = "aimer_widget"
version = "0.1.0"
edition = "2024"
resolver = "3"



[dependencies]
aimer_color.workspace = true
aimer_attribute.workspace = true
aimer_macro.workspace = true
aimer_utils.workspace = true
aimer_events.workspace = true
aimer_canvas.workspace = true
#####################
winit.workspace = true
once_cell.workspace = true
smallvec.workspace = true
crossbeam-channel.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
objc.workspace = true
tokio = {workspace = true, features = ["rt-multi-thread", "macros"]}
colored.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
arboard.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.workspace = true
wasm-bindgen.workspace = true