[package]
name = "animation"
version = "0.1.0"
edition = "2024"


[dependencies]
widget.workspace = true
attribute.workspace = true
constructor.workspace = true
utils.workspace = true
events.workspace = true


########################


canvas.workspace = true
winit.workspace = true
chrono.workspace = true
