[package]
name = "canvas"
version = "0.1.0"
edition = "2024"

[dependencies]
attribute.workspace = true
utils.workspace = true
color.workspace = true


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cupid.workspace = true


[target.wasm32-unknown-unknown.dependencies]
web-sys.workspace = true
wasm-bindgen.workspace = true
