[package]
name = "container"
version = "0.1.0"
edition = "2024"


[dependencies]
constructor.workspace  = true
widget.workspace = true





#################
winit.workspace = true
skia-safe.workspace = true
# glutin.workspace = true
rayon.workspace = true  
pixels.workspace = true
chrono.workspace = true


