[package]
name = "container"
version = "0.1.0"
edition = "2024"


[dependencies]
widget.workspace = true
attribute.workspace = true
constructor.workspace = true
events.workspace = true
canvas.workspace = true

#################

utils.workspace = true
winit.workspace = true
chrono.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
objc.workspace = true
tokio = {workspace = true, features = ["rt-multi-thread", "macros"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
